@startuml

class User {
Long id
String username
String address
UserType userType
LocalDate birthDate
}

class Reservation {
Long id;
String book;
String reservedBy;
OffsetDateTime reservedFrom;
OffsetDateTime reservedTo;
}

class Borrowing {
Long id;
String book;
String borrowedBy;
OffsetDateTime borrowDate;
OffsetDateTime expectedReturnDate;
boolean returned;
OffsetDateTime returnDate;
BigDecimal lateReturnWeeklyFine;
boolean fineResolved;
}

class Book {
Long id
String title
String author
String description
BookStatus status
}

enum UserType {
LIBRARIAN
MEMBER
}

enum BookStatus {
RESERVED
BORROWED
AVAILABLE
}

Book -- BookStatus
User -- UserType

@enduml
